# physiodigitaltwin-oc

./: .gitignore  README.md  pyproject.toml
src/pdt_oc/data/: __init__.py  synthetic.py
src/pdt_oc/dosing/: __init__.py  schedule.py
src/pdt_oc/models/: __init__.py  encoders.py  fusion.py  vae.py
src/pdt_oc/numerics/: __init__.py  integrator.py
src/pdt_oc/phys/: __init__.py  combined.py  gompertz.py  hill.py  state.py  two_compartment.py
src/pdt_oc/training/: __init__.py  collocation.py  losses.py  schedules.py
tests/: test_combined_system.py  test_dosing.py  test_physics_invariants.py  test_training_aux.py  test_vae_overfit.py
