[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdt_oc"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
